deployments/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: military-pipeline

---
apiVersion: v1
kind: Namespace
metadata:
  name: messaging
