deployments/go-services.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-client
  namespace: military-pipeline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-client
  template:
    metadata:
      labels:
        app: go-client
    spec:
      containers:
        - name: go-client
          image: 34.68.174.65:5000/go-client:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: go-client
  namespace: military-pipeline
spec:
  selector:
    app: go-client
  ports:
    - port: 8080
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-server
  namespace: military-pipeline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-server
  template:
    metadata:
      labels:
        app: go-server
    spec:
      containers:
        - name: go-server
          image: 34.68.174.65:5000/go-server:latest
          ports:
            - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: go-server
  namespace: military-pipeline
spec:
  selector:
    app: go-server
  ports:
    - port: 50051
      targetPort: 50051

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-consumer
  namespace: messaging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-consumer
  template:
    metadata:
      labels:
        app: go-consumer
    spec:
      containers:
        - name: go-consumer
          image: 34.68.174.65:5000/go-consumer:latest
