deployments/kubevirt.yaml
apiVersion: v1
kind: Service
metadata:
  name: valkey-service
  namespace: messaging
spec:
  selector:
    kubevirt.io/domain: valkey-vm
  ports:
    - port: 6379
      targetPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: messaging
spec:
  selector:
    kubevirt.io/domain: grafana-vm
  ports:
    - port: 3000
      targetPort: 3000
